--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -2,120 +2,16 @@
     <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
     <![endif]-->
     <div id="front">
-        <div class="site-header">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-4 col-sm-6 col-xs-6">
-                        <div id="templatemo_logo">
-                            <h1><a href="#">Open Door</a></h1>
-                        </div> <!-- /.logo -->
-                    </div> <!-- /.col-md-4 -->
-                    <div class="col-md-8 col-sm-6 col-xs-6">
-                        <a href="#" class="toggle-menu"><i class="fa fa-bars"></i></a>
-                        <div class="main-menu">
-                            <ul>
-                                <li><a href="#front">Home</a></li>
-                                <li><a href="#services">Services</a></li>
-                                <li><a href="#contact">Contact</a></li>
-                                <li><a href="">Login</a></li>
-                            </ul>
-                        </div> <!-- /.main-menu -->
-                    </div> <!-- /.col-md-8 -->
-                </div> <!-- /.row -->
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="responsive">
-                            <div class="main-menu">
-                                <ul>
-                                    <li><a href="#front">Home</a></li>
-                                    <li><a href="#services">Services</a></li>
-                                    <li><a href="#products">Products</a></li>
-                                    <li><a href="#contact">Contact</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div> <!-- /.container -->
-        </div> <!-- /.site-header -->
+        <site-header></site-header>
     </div> <!-- /#front -->
 
-    <div class="site-slider">
-        <ul class="bxslider">
-            <li>
-                <img src="images/slider/slide1.jpg" alt="slider image 1">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-12 text-right">
-                            <div class="slider-caption">
-                                <h2>HTML5 CSS3 Template</h2>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li>
-                <img src="images/slider/slide2.jpg" alt="slider image 2">
-                <div class="container caption-wrapper">
-                    <div class="slider-caption">
-                        <h2>Using Bootstrap Framework</h2>
-                    </div>
-                </div>
-            </li>
-            <li>
-                <img src="images/slider/slide3.jpg" alt="slider image 3">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-12 text-right">
-                            <div class="slider-caption">
-                                <h2>Mobile Ready Website</h2>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li>
-                <img src="images/slider/slide4.jpg" alt="slider image 4">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-12 text-right">
-                            <div class="slider-caption">
-                                <h2>Responsive Layout</h2>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li>
-                <img src="images/slider/slide5.jpg" alt="slider image 5">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-12 text-right">
-                            <div class="slider-caption">
-                                <h2>Download and use it for free</h2>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </li>
-        </ul> <!-- /.bxslider -->
-        <div class="bx-thumbnail-wrapper">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div id="bx-pager">
-                            <a data-slide-index="0" href=""><img src="images/slider/thumb1.jpg" alt="image 1" /></a>
-                            <a data-slide-index="1" href=""><img src="images/slider/thumb2.jpg" alt="image 2" /></a>
-                            <a data-slide-index="2" href=""><img src="images/slider/thumb3.jpg" alt="image 3" /></a>
-                            <a data-slide-index="3" href=""><img src="images/slider/thumb4.jpg" alt="image 4" /></a>
-                            <a data-slide-index="4" href=""><img src="images/slider/thumb5.jpg" alt="image 5" /></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div id="front" class="content-section">
+        <div class="container">
+            <h1 class="section-title">Fron page</h1>
+            {{title}}
         </div>
-    </div> <!-- /.site-slider -->
-
+        
+    </div>
     <div id="services" class="content-section">
         <div class="container">
             <div class="row">
