--- a/app/shared/topnav.component.html
+++ b/app/shared/topnav.component.html
@@ -18,7 +18,7 @@
 						<li><a href="#meet-team">Team</a></li>
 						<li><a href="#portfolio1">Portofolio</a></li>
 						<li><a href="#contact">Contact</a></li>
-						<li><a href="#">{{loginTitle}}</a></li>
+						<li><a href="#">[{{loginTitle}}]</a></li>
 					</ul>
 				</div>
 			</div>
