Fixed login modal issues

--- a/css/site.css
+++ b/css/site.css
@@ -1,3 +1,7 @@
+/* Main Primary color */
+/* Main Secondary color (1) */
+/* Main Secondary color (2) */
+/* Main Complement color */
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700);
 .cb-slideshow,
 .cb-slideshow:after {
@@ -598,7 +602,7 @@ footer {
 }
 #contact .fa {
   padding-right: 31px;
-  color: #E96840 ;
+  color: #E96840;
 }
 #follow-us {
   height: 220px;
