--- a/css/site.less
+++ b/css/site.less
@@ -2128,6 +2128,9 @@ ul.nav-pills {
     max-width: 380px;
 }
 
+.login-modal{
+    z-index:100000;
+}
 .login-modal-header {
     background: #27ae60;
     color: #fff;
