--- a/css/site.css
+++ b/css/site.css
@@ -1821,6 +1821,9 @@ ul.nav-pills {
   margin: 0 auto;
   max-width: 380px;
 }
+.login-modal {
+  z-index: 100000;
+}
 .login-modal-header {
   background: #27ae60;
   color: #fff;
