--- a/app/login/loginmodal.component.html
+++ b/app/login/loginmodal.component.html
@@ -5,6 +5,10 @@
             <div class="modal-header login-modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title text-center" id="loginModalLabel">USER AUTHENTICATION</h4>
+                <h4 *ngFor="#p of persons">
+                    {{p.firstname}}
+                </h4>
+
             </div>
             <div class="modal-body">
                 <div class="text-center">
