--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -328,7 +328,7 @@
                         <h2>Contact Us</h2>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-8">
+                <div class="col-lg-6 col-md-8" id="contact">
                     <form class="inline" id="contactForm" method="post">
                         <div class="row">
                             <div class="col-sm-6 height-contact-element">
