--- a/css/site.less
+++ b/css/site.less
@@ -984,20 +984,20 @@ select:focus {
     outline-color: transparent;
 }
 
-.form-control {
+#contact .form-control {
     color: #f7f7f7;
 }
 
-.form-control::-moz-placeholder {
+#contact .form-control::-moz-placeholder {
     color: #f7f7f7;
     opacity: 1
 }
 
-.form-control:-ms-input-placeholder {
+#contact .form-control:-ms-input-placeholder {
     color: #f7f7f7;
 }
 
-.form-control::-webkit-input-placeholder {
+#contact .form-control::-webkit-input-placeholder {
     color: #f7f7f7;
 }
 
